# Wallet-Application

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 2dbca3ea8238_initial_migrations.py
src/app/: config.py  crud.py  database.py  main.py  models.py  routers.py  schemas.py
src/test/: test_crud.py
