[tool.poetry]
name = "wallet-app"
version = "0.1.0"
description = "Сервис для отслеживания транзакций пользователя"
authors = ["Ирина Ивашко"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
fastapi = "^0.115.2"
sqlalchemy = "^2.0.35"
pydantic = "^2.9.2"
pytest = "^8.3.3"
asyncpg = "^0.29.0"
uvicorn = "^0.31.1"
alembic = "^1.13.3"
python-dotenv = "^1.0.1"
redis = "^5.1.1"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
